--- a/wrangler.toml
+++ b/wrangler.toml
@@ -11,6 +11,7 @@ r2_buckets = [
 kv_namespaces = [
     { binding = "NAME_ALIASES", id = "a7895bb6646d4f94bd59fce679cfdee8", preview_id = "a7895bb6646d4f94bd59fce679cfdee8" },
     { binding = "STICKER_ALIASES", id = "b22b923745e047a78c3846c1f439fe34", preview_id = "b22b923745e047a78c3846c1f439fe34" },
+    { binding = "PACK_METADATA", id = "2404d7bc91cf4e78a1cc2a5b7665c4a7", preview_id = "2404d7bc91cf4e78a1cc2a5b7665c4a7" },
 ]
 
 [build]
