--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -11,7 +11,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - uses: bradennapier/eslint-plus-action@v3
+      - uses: bradennapier/eslint-plus-action@master
         with:
           includeGlob: 'src/**/*'
           npmInstall: true
