More basic stuff for rewrite

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -2,15 +2,14 @@
   "version": "2.0.0",
   "tasks": [
     {
-      "type": "npm",
-      "script": "build",
+      "type": "typescript",
+      "tsconfig": "tsconfig.json",
+      "problemMatcher": ["$tsc"],
       "group": {
         "kind": "build",
         "isDefault": true
       },
-      "problemMatcher": [],
-      "label": "npm: build",
-      "detail": "webpack"
+      "label": "tsc: build - tsconfig.json"
     }
   ]
 }
