--- a/package.json
+++ b/package.json
@@ -3,11 +3,29 @@
   "version": "0.0.0",
   "scripts": {
     "start": "wrangler dev",
-    "deploy": "wrangler publish"
+    "deploy": "wrangler publish",
+    "lint:eslint": "eslint --max-warnings=0 src",
+    "lint:prettier": "prettier --check '*.{json,js}' 'src/**/*.{js,ts}'",
+    "lint": "concurrently 'npm:lint:*'",
+    "format": "prettier --write  '*.{json,js}' 'src/**/*.{js,ts}'"
   },
   "private": true,
+  "dependencies": {
+    "hono": "^1.6.2"
+  },
   "devDependencies": {
     "@cloudflare/workers-types": "^3.14.0",
+    "@typescript-eslint/eslint-plugin": "^5.30.5",
+    "@typescript-eslint/parser": "^5.30.5",
+    "concurrently": "^7.2.2",
+    "eslint": "^8.19.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-config-typescript": "^3.0.0",
+    "eslint-plugin-github": "^4.3.6",
+    "eslint-plugin-optimize-regex": "^1.2.1",
+    "eslint-plugin-regexp": "^1.7.0",
+    "eslint-plugin-sonarjs": "^0.13.0",
+    "prettier": "^2.7.1",
     "typescript": "^4.7.4",
     "wrangler": "2.0.16"
   }
