--- a/package.json
+++ b/package.json
@@ -15,10 +15,10 @@
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^3.14.1",
-    "@typescript-eslint/eslint-plugin": "^5.30.6",
-    "@typescript-eslint/parser": "^5.30.6",
-    "concurrently": "^7.2.2",
-    "eslint": "^8.19.0",
+    "@typescript-eslint/eslint-plugin": "^5.30.7",
+    "@typescript-eslint/parser": "^5.30.7",
+    "concurrently": "^7.3.0",
+    "eslint": "^8.20.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-config-typescript": "^3.0.0",
     "eslint-plugin-github": "^4.3.6",
@@ -27,6 +27,6 @@
     "eslint-plugin-sonarjs": "^0.13.0",
     "prettier": "^2.7.1",
     "typescript": "^4.7.4",
-    "wrangler": "2.0.21"
+    "wrangler": "^2.0.21"
   }
 }
