--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   },
   "private": true,
   "dependencies": {
-    "hono": "^2.0.5"
+    "hono": "^2.0.5",
+    "toucan-js": "^2.6.1"
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^3.14.1",
