--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,6 +1,7 @@
 name = "sticker-api"
 main = "src/index.ts"
 compatibility_date = "2022-07-07"
+node_compat = true
 
 [[r2_buckets]]
 binding = "STICKERS_R2"
