--- a/.github/workflows/eslint.yml
+++ b/.github/workflows/eslint.yml
@@ -28,6 +28,9 @@ jobs:
 
       - run: npm install
 
+      - name: Install ESLint SARIF Formatter
+        run: npm install @microsoft/eslint-formatter-sarif
+
       - name: Run ESLint
         run: npx eslint .
           --config .eslintrc.yml
