--- a/.github/workflows/wrangler.yml
+++ b/.github/workflows/wrangler.yml
@@ -5,6 +5,11 @@ on:
     branches:
       - main
 
+# This allows a subsequently queued workflow run to interrupt previous runs
+concurrency:
+  group: '${{ github.workflow }} @ ${{ github.event.pull_request.head.label || github.head_ref || github.ref }}'
+  cancel-in-progress: true
+
 jobs:
   deploy:
     runs-on: ubuntu-latest
