--- a/.github/workflows/wrangler.yml
+++ b/.github/workflows/wrangler.yml
@@ -5,7 +5,8 @@ on:
     branches: [main]
     paths:
       - .github/workflows/wrangler.yml
-      - package*.json
+      - package.json
+      - pnpm-lock.yaml
       - src/**
       - tsconfig*.json
       - wrangler.toml
@@ -22,12 +23,14 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
+      - uses: pnpm/action-setup@v2
+
       - uses: actions/setup-node@v3
         with:
-          node-version: 16
-          cache: npm
+          node-version: 18
+          cache: pnpm
 
-      - run: npm install
+      - run: pnpm install --frozen-lockfile
 
       - name: Publish
         uses: cloudflare/wrangler-action@2.0.0
