--- a/.github/workflows/eslint.yml
+++ b/.github/workflows/eslint.yml
@@ -5,12 +5,11 @@ on:
     branches: [main]
     paths:
       - .github/workflows/eslint.yml
-      - package*.json
+      - package.json
+      - pnpm-lock.yaml
       - tsconfig*.json
       - '**/.eslint*'
       - '**/eslint.config.*'
-      - '**/.prettier*' # Prettier config files
-      - '**/prettier.config.*' # JS prettier config files
       - '**/*.editorconfig' # Used by prettier
       - '**/*.[cm]?jsx?'
       - '**/*.tsx?'
@@ -28,17 +27,15 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
+      - uses: pnpm/action-setup@v2
+
       - name: Setup Node
         uses: actions/setup-node@v3
         with:
-          node-version: 16
-          cache: npm
-          cache-dependency-path: package-lock.json
+          node-version: 18
+          cache: pnpm
 
-      - run: npm install
-
-      - name: Install ESLint SARIF Formatter
-        run: npm install @microsoft/eslint-formatter-sarif
+      - run: pnpm install --frozen-lockfile
 
       - name: Run ESLint
         run: npx eslint .
